--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
     "al.enableCodeAnalysis": true,
     "al.codeAnalyzers": [
         "${CodeCop}",
-        "${UICop}"
+        "${UICop}",
+        "${PerTenantExtensionCop}",
+        "${AppSourceCop}"
     ],
     "al.ruleSetPath": "./.vscode/normasCursos.ruleset.json"
 }
