--- a/TestApp/app.json
+++ b/TestApp/app.json
@@ -1,7 +1,7 @@
 {
-  "id": "ef640731-7004-45a1-8787-6305b6133b0e",
+  "id": "edc328db-ae58-4cf7-a8ec-65b23dcf49ab",
   "name": "TestApp",
-  "publisher": "Default Publisher",
+  "publisher": "iusUp",
   "version": "1.0.0.0",
   "brief": " ",
   "description": "",
